# kansei

./: .gitignore  Cargo.toml  INTERPRETER.md  LANGUAGE.md  README.md
.cargo/: config.toml
examples/hello_module/: README.md  demo.ks
examples/hello_module/modules/: hello_module.ks
helix/: languages.toml
helix/runtime/queries/kansei/: indents.scm  textobjects.scm
scripts/: build-wasm.ks  test-logging.sh
src/: ast.rs  eval.rs  intern.rs  lexer.rs  lsp.rs  main.rs  parser.rs  pm.rs  sexpr.rs  source.rs  value.rs  wasm.rs  wasm_pm.rs
src/std/: file.rs  io.rs  kansei.rs  log.rs  mod.rs  os.rs  parallel.rs  simd.rs  wasm.rs
src/std/lib/: base64.rs  bytes.rs  clap.rs  crypto.rs  csv.rs  datetime.rs  egui.rs  flate2.rs  http.rs  image.rs  math.rs  mmap.rs  mod.rs  net.rs  path.rs  polars.rs  regex.rs  serde.rs  sqlite.rs  toml.rs  tui.rs  uuid.rs  yaml.rs  zellij.rs
src/std/lib/tests/: mod.rs  spectral_norm.rs
tests/: test_args.ks  test_casts.ks  test_currying.ks  test_datatypes.ks  test_env.ks  test_env_snapshot.ks  test_functions.ks  test_import.ks  test_io_lines.ks  test_io_walk.ks  test_iterators.ks  test_lib_bytes.ks  test_lib_mmap.ks  test_log_config.ks  test_logging.ks  test_logic.ks  test_module.ks  test_os_run.ks  test_parallel.ks  test_parallel_context.ks  test_result.ks  test_structs.ks  test_structs_noshadowing.ks  test_wasm_spec.ks  test_yield.ks
tests/image/: test_lib_image.ks
tests/modules/: test_modules.ks
tests/modules/demo/mod/: sample_mod.ks
tests/plotters/: plotxy.ks  plotxy_serde.ks
tests/shootout/: spectral-norm-opt.ks  spectral-norm-simd-f32.ks  spectral-norm-simd-parallel.ks  spectral-norm-simd.ks  spectral-norm-stdlib.ks  spectral-norm-wasm.ks  spectral-norm-wasmtime.ks  spectral-norm.ks  spectral-norm.ks.ast  spectral-norm.ks.byte
tests/sqlite/: test_lib_sqlite.ks
tests/wasm/: wasm-hello.ks  wasm-plotters.ks
wasm/plotters/: Cargo.toml  README.md
wasm/plotters/src/: lib.rs
wasm/spectral_norm/: Cargo.toml
wasm/spectral_norm/src/: lib.rs
