[package]
name = "kansei"
version = "0.0.1"
edition = "2024"

[dependencies]
directories = "6.0.0"
rustc-hash = "2.1.1"
rustyline = "17.0.2"
smallvec = "1.15.1"
wasmi = "0.31.2"
polars = { version = "0.39.2", default-features = false, features = ["csv"] }
clap = { version = "4.5.4", default-features = false, features = ["std"] }
serde_json = "1.0.117"
regex = "1.10.6"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
rand = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12.1"
blake3 = "1.5.3"
ureq = { version = "2.10.1", default-features = true }
csv = "1.3.0"
