[package]
name = "kansei"
version = "0.0.1"
edition = "2024"

[workspace]
members = [
    "wasm/plotters",
    "wasm/spectral_norm",
]

[dependencies]
directories = "6.0.0"
rustc-hash = "2.1.1"
rustyline = "17.0.2"
smallvec = "1.15.1"
wasmi = "0.31.2"
wasmtime = { version = "18.0.2", optional = true }
polars = { version = "0.39.2", default-features = false, features = ["csv"] }
clap = { version = "4.5.4", default-features = false, features = ["std"] }
serde_json = "1.0.117"
regex = "1.10.6"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
rand = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12.1"
blake3 = "1.5.3"
ureq = { version = "2.10.1", default-features = true }
csv = "1.3.0"
base64 = "0.22.1"
uuid = { version = "1.10.0", features = ["v4"] }
toml = "0.8.19"
serde_yaml = "0.9.34"
flate2 = { version = "1.0.30", default-features = false, features = ["rust_backend"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
memmap2 = "0.9.4"

[features]
default = []
flate2-zlib = ["flate2/zlib"]
flate2-zlib-ng = ["flate2/zlib-ng"]
wasmtime = ["dep:wasmtime"]
