[package]
name = "kansei"
version = "0.0.1"
edition = "2024"
authors = ["Andreas Hauser <andreas@creative-memory.net>"]
description = "Kansei programming language"
license = "EUPL-1.2"
keywords = ["programming", "language"]
repository = "https://github.com/ahcm/kansei"

[workspace]
members = [
    "wasm/plotters",
    "wasm/spectral_norm",
]

[profile.release]
strip = true
lto = "fat"        # Link Time Optimization: mostly for size benefits
codegen-units = 1  # Reduce parallelism to allow better optimization
panic = "abort"    # Removes unwinding logic (smaller & slightly faster)
opt-level = 3      # Maximize speed (default is 3, but good to be explicit)

[dependencies]
directories = "6.0.0"
rustc-hash = "2.1.1"
rustyline = "17.0.2"
smallvec = "1.15.1"
wasmi = { version = "1.0.8", optional = true }
wasmtime = "41.0.1"
polars = { version = "0.52.0", default-features = false, features = ["csv"] }
clap = { version = "4.5.56", default-features = false, features = ["std"] }
serde_json = "1.0.149"
regex = "1.12.2"
glob = "0.3.3"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
notify = "8.2.0"
libc = "0.2.180"
rand = "0.9.2"
rayon = "1.11.0"
sha2 = "0.10.9"
hmac = "0.12.1"
blake3 = "1.8.3"
ureq = { version = "3.1.4", default-features = true }
csv = "1.4.0"
base64 = "0.22.1"
uuid = { version = "1.20.0", features = ["v4"] }
toml = "0.9.11"
serde_yaml = "0.9.34"
flate2 = { version = "1.1.8", default-features = false, features = ["rust_backend"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
memmap2 = "0.9.9"
eframe = { version = "0.33.3", optional = true }
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"], optional = true }
rustls = { version = "0.23.36", optional = true }
webpki-roots = { version = "1.0.5", optional = true }

[features]
default = ["std-lib-all"]
std-lib-all = [
    "lib-base64",
    "lib-bytes",
    "lib-clap",
    "lib-crypto",
    "lib-csv",
    "lib-datetime",
    "lib-egui",
    "lib-flate2",
    "lib-http",
    "lib-image",
    "lib-math",
    "lib-mmap",
    "lib-net",
    "lib-path",
    "lib-polars",
    "lib-regex",
    "lib-serde",
    "lib-sqlite",
    "lib-tui",
    "lib-tests",
    "lib-toml",
    "lib-uuid",
    "lib-yaml",
]
lib-base64 = []
lib-bytes = []
lib-clap = []
lib-crypto = []
lib-csv = []
lib-datetime = []
lib-egui = ["dep:eframe"]
lib-flate2 = []
lib-http = []
lib-image = []
lib-math = []
lib-mmap = []
lib-net = ["dep:rustls", "dep:webpki-roots"]
lib-path = []
lib-polars = []
lib-regex = []
lib-serde = []
lib-sqlite = []
lib-tui = ["dep:crossterm", "dep:ratatui"]
lib-tests = []
lib-toml = []
lib-uuid = []
lib-yaml = []
flate2-zlib = ["flate2/zlib"]
flate2-zlib-ng = ["flate2/zlib-ng"]
wasmi = ["dep:wasmi"]
egui = ["lib-egui"]
tui = ["lib-tui"]
